# scheduled_blockchain_payments

./: .gitignore  Cargo.toml  README.md  sc-config.toml
backend/: README.md  package.json
backend/src/: app.module.ts  main.ts
backend/src/health/: health.controller.ts
backend/src/subscriptions/: contract.service.ts  subscriptions.controller.ts  subscriptions.module.ts  subscriptions.service.ts
backend/src/subscriptions/dto/: create-subscription.dto.ts
backend/src/subscriptions/entities/: subscription.entity.ts
dapp/: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
dapp/src/: App.tsx  index.tsx  initConfig.ts
dapp/src/components/Footer/: Footer.tsx
dapp/src/config/: config.devnet.ts  index.ts
dapp/src/contracts/: scheduled-payments.abi.json
dapp/src/hooks/: useSubscriptions.ts  useTransactions.ts
dapp/src/localConstants/: routes.ts
dapp/src/routes/: index.ts  routes.ts
dapp/src/styles/: globals.css
interactor/: Cargo.toml  state.json  state.toml
interactor/src/: interact.rs  interactor_main.rs  scheduled_payments_contract_proxy.rs
interactor/tests/: interact_cs_tests.rs  interact_tests.rs
meta/: Cargo.toml
meta/src/: main.rs
output/: scheduled-payments-contract.abi.json  scheduled-payments-contract.imports.json
scheduler/: config.py  requirements.txt  scheduler.py
src/: scheduled_payments_contract.rs
tests/: cashflow_scenario_test.rs  scheduled_payments_contract_scenario_go_test.rs  scheduled_payments_contract_scenario_rs_test.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
(+26 files in other folders)
