[package]
name = "scheduled-payments-contract"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["you"]

[lib]
path = "src/scheduled_payments_contract.rs"

[dependencies.multiversx-sc]
version = "0.62.1"

[dependencies.multiversx-sc-derive]
version = "0.62.1"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.62.1"

[workspace]
members = [
    ".",
    "meta",
]
